--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -348,6 +348,11 @@
                 text-align: left;
                 padding: 0 20px;
             }
+            input.letter {
+                &::placeholder {
+                    letter-spacing: 4px;
+                }
+            }
             textarea {
                 border: 1px solid rgb(219, 219, 219);
                 height: 123px;
@@ -358,7 +363,7 @@
                 font-size: 16px;
                 font-weight: 500;
                 text-align: left;
-                padding: 5px 20px;
+                padding: 16px 20px;
                 resize: none;
             }
         }
