--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -8,7 +8,7 @@
         gap: 40px;
     }
     &__top {
-        margin-bottom: 35px;
+        margin-bottom: 46px;
     }
     &__right {
         max-width: 480px;
@@ -30,12 +30,12 @@
     }
     &__lists {
         display: flex;
-        gap: 180px;
+        gap: 196px;
     }
     &__list {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 18px;
         &-link {
             color: rgb(255, 255, 255);
             font-size: 14px;
@@ -86,7 +86,7 @@
             font-size: 16px;
             font-weight: 600;
             line-height: 20px;
-            letter-spacing: 0%;
+            text-transform: uppercase;
         }
         &-list {
             display: flex;
@@ -101,7 +101,7 @@
         line-height: 17px;
         opacity: .6;
         &:not(:last-of-type) {
-            margin-bottom: 20px;
+            margin-bottom: 14px;
         }
     }
 }
@@ -139,8 +139,12 @@
 @media (max-width: 500px) {
     .footer {
         padding: 50px 0;
+        &__wrapper {
+            gap: 39px;
+        }
         &__lists {
             flex-direction: column;
+            gap: 43px;
         }
         &__list {
             flex-direction: row;
@@ -152,13 +156,39 @@
                 gap: 25px;
             }
         }
+        &__info {
+            gap: 19px;
+            &-block {
+                font-size: 14px;
+                line-height: 17px;
+                br {
+                    display: none;
+                }
+            }
+        }
         &__social {
+            gap: 15px;
+            margin-bottom: 50px;
             &-title {
                 font-size: 14px;
+                line-height: 17px;
+                text-transform: uppercase;
+            }
+            &-link {
+                display: flex;
+                width: 30px;
+                height: 30px;
+                svg {
+                    width: 30px;
+                    height: 30px;
+                }
             }
         }
         &__text {
             font-size: 12px;
+        }
+        &__top {
+            margin-bottom: 28px;
         }
     }
 }
