--- a/scss/sections/_hot.scss
+++ b/scss/sections/_hot.scss
@@ -11,6 +11,7 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 20px;
+        margin-bottom: 28px;
     }
     &__card {
         box-sizing: border-box;
@@ -77,6 +78,18 @@
             margin: auto auto 0 auto;
         }
     }
+    &__button {
+        border-radius: 12px;
+        height: 60px;
+        max-width: 460px;
+        width: 100%;
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 27px;
+        text-transform: uppercase;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
 }
 @media (max-width: 1260px) {
     .hot {
@@ -84,7 +97,7 @@
             grid-template-columns: repeat(2, 1fr);
             max-width: 580px;
             width: 100%;
-            margin: 0 auto;
+            margin: 0 auto 28px;
         }
     }
 }
@@ -99,6 +112,16 @@
         &__grid {
             grid-template-columns: 1fr;
             max-width: 280px;
+            margin: 0 auto 20px;
+        }
+        &__button {
+            border-radius: 8px;
+            max-width: 280px;
+            height: 50px;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 20px;
+            padding: 0;
         }
     }
 }
