--- a/scss/sections/_location.scss
+++ b/scss/sections/_location.scss
@@ -27,6 +27,9 @@
         flex-direction: column;
         gap: 20px;
         margin-bottom: 30px;
+        &_pixel {
+            margin-bottom: 25px;
+        }
     }
     &__label {
         color: rgb(131, 131, 131);
@@ -49,8 +52,11 @@
     }
     &__accordion {
         margin-bottom: 25px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
         &-header {
-            padding: 5px 0;
+            // padding: 5px 0;
             display: flex;
             align-items: center;
             gap: 3px;
@@ -72,6 +78,9 @@
         }
         &-arrow {
             transition: .6s all;
+        }
+        &-item {
+            cursor: pointer;
         }
         &-item.accordion__item_show {
             .location__accordion-arrow {
@@ -96,6 +105,9 @@
     &__map {
         border-radius: 38px;
         overflow: hidden;
+    }
+    &_village {
+        padding: 99px 0 60px 0;
     }
 }
 @media (max-width: 1062px) {
@@ -122,6 +134,9 @@
         }
         &__info {
             border-radius: 18px;
+        }
+        &_village {
+            padding: 94px 0 60px 0;
         }
     }
 }
@@ -160,8 +175,9 @@
         }
         &__accordion {
             margin-bottom: 20px;
+            gap: 20px;
             &-header {
-                padding: 7.5px 0;
+                // padding: 7.5px 0;
                 justify-content: space-between;
             }
             &-title {
