--- a/scss/sections/_near.scss
+++ b/scss/sections/_near.scss
@@ -1,10 +1,10 @@
 .near {
-    padding: 50px 0;
+    padding: 50px 0 102px 0;
     &__wrapper {
         border-radius: 38px;
         overflow: hidden;
         background: rgb(255, 255, 255);
-        padding: 35px 30px;
+        padding: 30px 30px;
         box-sizing: border-box;
         position: relative;
         display: flex;
@@ -61,6 +61,7 @@
 }
 @media (max-width: 642px) {
     .near {
+        padding: 50px 0 50px 0;
         &__card {
             max-width: 240px;
             .projects__card {
