--- a/scss/sections/_process.scss
+++ b/scss/sections/_process.scss
@@ -211,6 +211,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
+                text-transform: uppercase;
             }
             &-text {
                 grid-column: 1 / span 2;
