--- a/scss/sections/_selection.scss
+++ b/scss/sections/_selection.scss
@@ -127,6 +127,7 @@
         }
         &__grid {
             gap: 20px;
+            margin-bottom: 30px;
         }
         &__form {
             &-label {
